tests/snapshots/execution_spec__apollo-tracing.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar Empty

scalar JSON

scalar PhoneNumber

type Query {
  hello: String!
}

scalar Url

schema {
  query: Query
}
