tests/snapshots/execution_spec__apollo-tracing.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server(graphiql: true, hostname: "0.0.0.0", port: 8000) {
  query: Query
}

type Query {
  hello: String! @http(baseURL: "http://api.com", path: "/")
}
