tests/snapshots/execution_spec__async-cache-enabled.md_test_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "posts": [
        {
          "user": {
            "name": "Leanne Graham"
          }
        },
        {
          "user": {
            "name": "Leanne Graham"
          }
        }
      ]
    }
  }
}
