tests/snapshots/execution_spec__auth-basic.md_assert_4.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": null,
    "errors": [
      {
        "message": "Authentication Failure\nCaused by:\n  • Missing Authorization Header",
        "locations": [
          {
            "line": 2,
            "column": 3
          }
        ]
      }
    ]
  }
}
