tests/snapshots/execution_spec__auth-basic.md_assert_5.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "protectedType": {
        "name": "mutation name",
        "nested": "mutation nested"
      }
    }
  }
}
